# tier-5-test

./: .env.example  .gitignore  QUICKSTART.md  README.md  SMOKE_TEST.md  build.sh  cli.py  data_prep_guide.md  debug.sh  docker-compose.mac.yml  docker-compose.yml  gold_standard.json  pyproject.toml  requirements.txt  run_claude35_haiku.sh  run_claude3_haiku.sh  run_claude_haiku.sh  run_gemini.sh  run_gemini_flash.sh  run_gemini_flash_lite.sh  serve.sh  update.sh
Kanunlar/: IK_4857_Is_Kanunu.txt  TMK_4721_Turk_Medeni_Kanunu.txt
Kararlar/: ilk_derece_kararlar.txt
app/: main.py  models.py
corpus/: 1-ceza-dairesi-e-2024-2954-k-2025-9052-t-16-12-2025-1.md  1-ceza-dairesi-e-2024-3889-k-2025-8921-t-11-12-2025-1.md  1-ceza-dairesi-e-2024-5092-k-2025-8923-t-11-12-2025-1.md  1-ceza-dairesi-e-2024-5472-k-2025-8926-t-11-12-2025-1.md  1-ceza-dairesi-e-2024-6671-k-2025-8927-t-11-12-2025-1.md  1-ceza-dairesi-e-2024-6850-k-2025-9015-t-15-12-2025-1.md  1-ceza-dairesi-e-2025-1261-k-2025-8928-t-11-12-2025-1.md  1-ceza-dairesi-e-2025-6240-k-2025-8940-t-11-12-2025-1.md  1-ceza-dairesi-e-2025-6707-k-2025-9605-t-26-12-2025-1.md  1-ceza-dairesi-e-2025-7350-k-2025-8929-t-11-12-2025-1.md  1-hukuk-dairesi-e-2007-9815-k-2007-11607-1.md  1-hukuk-dairesi-e-2014-22602-k-2017-953-1.md  1-hukuk-dairesi-e-2024-1977-k-2025-5810-t-9-12-2025-1.md  1-hukuk-dairesi-e-2024-256-k-2025-5811-t-9-12-2025-1.md  1-hukuk-dairesi-e-2024-5797-k-2025-5772-t-8-12-2025-1.md  1-hukuk-dairesi-e-2025-5420-k-2025-5720-t-4-12-2025-1.md  10-ceza-dairesi-e-2024-6367-k-2026-362-t-15-1-2026-1.md  2013-7449.md  2019-17969.md  (+99 more)
(+688 files in other folders)
