[project]
name = "legal-rag"
version = "0.1.0"
description = "Turkish legal jurisprudence retrieval system"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9",
    "tiktoken>=0.7",
    "openai>=1.0",
    "pymilvus>=2.4",
    "numpy>=1.24",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
