[project]
name = "legal-rag"
version = "0.1.0"
description = "Turkish legal jurisprudence retrieval system"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "tiktoken>=0.7",
    "openai>=1.0",
    "pymilvus>=2.4",
    "numpy>=1.24",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.0",
    "neo4j>=5.18",
    "networkx>=3.3",
    "scipy>=1.11",
    "boto3>=1.34",
    "pymongo>=4.6",
    "anthropic>=0.40",
    "google-genai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
